--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                 <div class="overlay">
                     <p>Elegant journey White Audi, a fusion of style and performance</p>
                 </div>
-                <img src="/images/5z.png" alt="">
+                <img src="images/5z.png" alt="">
             </div>
             <div data-scroll data-scroll-speed="-1"class="box">
                 <div class="overlay">
@@ -168,7 +168,7 @@
             </div>
             <div class="right4">
                 <div class="img5">
-                <img src="/images/aaa.png" alt="">
+                <img src="images/aaa.png" alt="">
                 </div>
             </div>
             
